unpackaged/main/default/objects/Opportunity/fields/Accounts_UUID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_UUID__c</fullName>
    <description>Pulls the Accounts UUID from the contact to the Opportunity for use in lookups</description>
    <formula>Contact__r.Accounts_UUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The OpenStax Accounts UUID for this user.</inlineHelpText>
    <label>Accounts UUID</label>
    <type>Text</type>
</CustomField>