unpackaged/main/default/objects/Opportunity/fields/All_Emails__c.field-meta.xml
<CustomField>
    <fullName>All_Emails__c</fullName>
    <formula>Contact__r.All_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Emails</label>
    <type>Text</type>
</CustomField>