unpackaged/main/default/objects/Opportunity/fields/Annualization_Number__c.field-meta.xml
<CustomField>
    <fullName>Annualization_Number__c</fullName>
    <formula>Book__r.Annualization_number__c-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualization Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>