unpackaged/main/default/objects/Opportunity/fields/Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Base_Year__c</fullName>
    <formula>year( Class_Start_Date__c )- 

IF(Month(Class_Start_Date__c) &gt;6, 
   0, 
   1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>