unpackaged/main/default/objects/Opportunity/fields/Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Book_ID__c</fullName>
    <formula>CASESAFEID(Book__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book ID</label>
    <type>Text</type>
</CustomField>