unpackaged/main/default/objects/Opportunity/fields/Book_Opp__c.field-meta.xml
<CustomField>
    <fullName>Book_Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Book Opp related to this Tutor Opp</description>
    <label>Book Opp</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Book Opp</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Tutor Opps)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>