unpackaged/main/default/objects/Opportunity/fields/Book_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Book_Opportunity__c</fullName>
    <formula>OR(  RecordTypeId = "0120B000000NAH0", RecordTypeId = "0120B000000NAH5")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Opportunity</label>
    <type>Checkbox</type>
</CustomField>