unpackaged/main/default/objects/Opportunity/fields/Book_Text__c.field-meta.xml
<CustomField>
    <fullName>Book_Text__c</fullName>
    <formula>Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Text</label>
    <type>Text</type>
</CustomField>