unpackaged/main/default/objects/Opportunity/fields/Books_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Books_Adopted__c</fullName>
    <formula>Contact__r.Books_Adopted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Books Adopted</label>
    <type>Text</type>
</CustomField>