unpackaged/main/default/objects/Opportunity/fields/Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status__c</fullName>
    <formula>Contact__r.Campaign_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Member Status</label>
    <type>Text</type>
</CustomField>