unpackaged/main/default/objects/Opportunity/fields/Concept_Coach__c.field-meta.xml
<CustomField>
    <fullName>Concept_Coach__c</fullName>
    <formula>Book__r.Concept_Coach__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concept Coach</label>
    <type>Checkbox</type>
</CustomField>