unpackaged/main/default/objects/Opportunity/fields/Contact_Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Adoption_Status__c</fullName>
    <formula>Contact__r.Adoption_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Adoption Status</label>
    <type>Text</type>
</CustomField>