unpackaged/main/default/objects/Opportunity/fields/Contact_Contribution_Level__c.field-meta.xml
<CustomField>
    <fullName>Contact_Contribution_Level__c</fullName>
    <formula>TEXT(Contact__r.Contribution_level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Contribution Level</label>
    <type>Text</type>
</CustomField>