unpackaged/main/default/objects/Opportunity/fields/Contact_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Source__c</fullName>
    <description>The lead source from the Contact, which was populated during lead conversion</description>
    <formula>TEXT(Contact__r.LeadSource)</formula>
    <inlineHelpText>The lead source from the Contact, which was populated during lead conversion</inlineHelpText>
    <label>Contact Lead Source</label>
    <type>Text</type>
</CustomField>