unpackaged/main/default/objects/Opportunity/fields/Courseware_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Courseware_Applicable__c</fullName>
    <formula>Book__r.Courseware_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courseware Applicable</label>
    <type>Checkbox</type>
</CustomField>