unpackaged/main/default/objects/Opportunity/fields/CSDInput__c.field-meta.xml
<CustomField>
    <fullName>CSDInput__c</fullName>
    <label>CSDInput</label>
    <type>Date</type>
</CustomField>