unpackaged/main/default/objects/Opportunity/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depreciate Department</label>
    <type>Checkbox</type>
</CustomField>