unpackaged/main/default/objects/Opportunity/fields/Department_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Department_Adoption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department Adoption</label>
    <type>Checkbox</type>
</CustomField>