unpackaged/main/default/objects/Opportunity/fields/Department_Contact__c.field-meta.xml
<CustomField>
    <fullName>Department_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Primary Contact for department</description>
    <label>Department Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Department Contact)</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>