unpackaged/main/default/objects/Opportunity/fields/Department_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Department_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Department opp is not a department</errorMessage>
        <filterItems>
            <field>Opportunity.Department_Adoption__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opps in Dept</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>