unpackaged/main/default/objects/Opportunity/fields/Department_Total__c.field-meta.xml
<CustomField>
    <fullName>Department_Total__c</fullName>
    <description>Number of students across entire adoption</description>
    <inlineHelpText>Number of students across entire adoption</inlineHelpText>
    <label>Department Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>