unpackaged/main/default/objects/Opportunity/fields/Dept_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Dept_Contact_ID__c</fullName>
    <formula>Department_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept Contact ID</label>
    <type>Text</type>
</CustomField>