unpackaged/main/default/objects/Opportunity/fields/Dept_LIT__c.field-meta.xml
<CustomField>
    <fullName>Dept_LIT__c</fullName>
    <formula>Department_Contact__r.Last_In_Touch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dept LIT</label>
    <type>Date</type>
</CustomField>