unpackaged/main/default/objects/Opportunity/fields/Dept_Students_Stored__c.field-meta.xml
<CustomField>
    <fullName>Dept_Students_Stored__c</fullName>
    <label>Dept Students Stored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>