unpackaged/main/default/objects/Opportunity/fields/DeptSort__c.field-meta.xml
<CustomField>
    <fullName>DeptSort__c</fullName>
    <formula>IF(  Opportunity_Record_Type_Name__c = "Tutor Opp", "",

 Book__c  
&amp;
 CASESAFEID( Account.Id )
&amp;
 TEXT(Base_Year__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeptSort</label>
    <type>Text</type>
</CustomField>