unpackaged/main/default/objects/Opportunity/fields/Different_Base_Year__c.field-meta.xml
<CustomField>
    <fullName>Different_Base_Year__c</fullName>
    <formula>IF( AND( NOT(ISBLANK(Fall_Start_Date__c)), NOT(ISBLANK(Spring_Start_Date__c)) ),

  year( Fall_Start_Date__c )   - IF(Month(Fall_Start_Date__c)   &lt;6, 0, 1)
  =
  year( Spring_Start_Date__c ) - IF(Month(Spring_Start_Date__c) &lt;6, 0, 1) ,

FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different Base Year</label>
    <type>Checkbox</type>
</CustomField>