unpackaged/main/default/objects/Opportunity/fields/Dont_Renew_After__c.field-meta.xml
<CustomField>
    <fullName>Dont_Renew_After__c</fullName>
    <formula>Contact__r.Dont_Renew_After__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dont Renew After</label>
    <type>Date</type>
</CustomField>