unpackaged/main/default/objects/Opportunity/fields/Dup_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Dup_Name_Check__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Checks for duplicates</description>
    <inlineHelpText>Checks for duplicates</inlineHelpText>
    <label>Dup Name Check</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>