unpackaged/main/default/objects/Opportunity/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <formula>Account.Exclude__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>