unpackaged/main/default/objects/Opportunity/fields/Fall_Dept_Max_Students__c.field-meta.xml
<CustomField>
    <fullName>Fall_Dept_Max_Students__c</fullName>
    <label>Fall Dept Max Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>