unpackaged/main/default/objects/Opportunity/fields/Fall_Savings__c.field-meta.xml
<CustomField>
    <fullName>Fall_Savings__c</fullName>
    <formula>Fall_Students__c * Saving_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fall_Students__c * Saving_Number__c</inlineHelpText>
    <label>Fall Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>