unpackaged/main/default/objects/Opportunity/fields/Fall_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fall_Start_Date__c</fullName>
    <label>Fall Start Date</label>
    <type>Date</type>
</CustomField>