unpackaged/main/default/objects/Opportunity/fields/Fall_Students__c.field-meta.xml
<CustomField>
    <fullName>Fall_Students__c</fullName>
    <label>Fall Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>