unpackaged/main/default/objects/Opportunity/fields/FromTutorTemp__c.field-meta.xml
<CustomField>
    <fullName>FromTutorTemp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromTutorTemp</label>
    <type>Checkbox</type>
</CustomField>