unpackaged/main/default/objects/Opportunity/fields/FV_Status__c.field-meta.xml
<CustomField>
    <fullName>FV_Status__c</fullName>
    <formula>TEXT(Contact__r.FV_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FV Status</label>
    <type>Text</type>
</CustomField>