unpackaged/main/default/objects/Opportunity/fields/Influenced_by_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Influenced_by_Contractors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Influenced by Contractors</label>
    <type>Checkbox</type>
</CustomField>