unpackaged/main/default/objects/Opportunity/fields/K12__c.field-meta.xml
<CustomField>
    <fullName>K12__c</fullName>
    <formula>IF(
CASE(Account.Type,
"High School", "TRUE",
"Elementary School", "TRUE",
"Middle/Junior High School", "TRUE",
"K-12 School", "TRUE",
"School District", "TRUE",
"Home School", "TRUE",
"FALSE") = "TRUE", TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>K12</label>
    <type>Checkbox</type>
</CustomField>