unpackaged/main/default/objects/Opportunity/fields/Last_In_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_In_Touch_Date__c</fullName>
    <formula>Contact__r.Last_In_Touch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last In Touch Date</label>
    <type>Date</type>
</CustomField>