unpackaged/main/default/objects/Opportunity/fields/Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Last_Week__c</fullName>
    <formula>MIN(
MCEILING((365 - (DATEVALUE(TEXT(YEAR( Today())) + "-12-31") - Today()) +
IF( MOD(YEAR(Today()),4)=0, 1,0)) / 7) , 52)

-

Week_No__c

=1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Week</label>
    <type>Checkbox</type>
</CustomField>