unpackaged/main/default/objects/Opportunity/fields/Marketing_TP__c.field-meta.xml
<CustomField>
    <fullName>Marketing_TP__c</fullName>
    <description>Confirmed Date</description>
    <formula>IF( MONTH( CloseDate ) &lt;9 , "Jan-Aug", "Sept-Dec")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Confirmed Date</inlineHelpText>
    <label>Marketing TP</label>
    <type>Text</type>
</CustomField>