unpackaged/main/default/objects/Opportunity/fields/Max_Student_Number__c.field-meta.xml
<CustomField>
    <fullName>Max_Student_Number__c</fullName>
    <formula>MAX( Students__c ,  Fall_Students__c ,  Spring_Students__c ,  Summer_Students__c ,  Fall_Dept_Max_Students__c ,  Spring_Dept_Max_Students__c ,  Summer_Dept_Max_Students__c ,  Students_Stored__c ,  Dept_Students_Stored__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Student Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>