unpackaged/main/default/objects/Opportunity/fields/Need_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Need_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Rollup</label>
    <type>Checkbox</type>
</CustomField>