unpackaged/main/default/objects/Opportunity/fields/Needs_Sync__c.field-meta.xml
<CustomField>
    <fullName>Needs_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Sync</label>
    <type>Checkbox</type>
</CustomField>