unpackaged/main/default/objects/Opportunity/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <formula>OR( 
 RecordType.Name = "Dept Closed",
 RecordType.Name = "Dept Open",
 RecordType.Name = "Opp Closed",
 RecordType.Name = "Opp Open",
 RecordType.Name = "Book Opp",
 RecordType.Name = "Book Dept"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>