unpackaged/main/default/objects/Opportunity/fields/No_of_subjects__c.field-meta.xml
<CustomField>
    <fullName>No_of_subjects__c</fullName>
    <formula>Contact__r.Number_of_Subjects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of subjects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>