unpackaged/main/default/objects/Opportunity/fields/Number_of_Subjects_Interest__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Subjects_Interest__c</fullName>
    <formula>Contact__r.Number_of_Subjects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Subjects Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>