unpackaged/main/default/objects/Opportunity/fields/Number_of_Tutor_Courses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tutor_Courses__c</fullName>
    <description>Count of courses</description>
    <inlineHelpText>Count of courses (not sections)</inlineHelpText>
    <label>Number of Tutor Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>