unpackaged/main/default/objects/Opportunity/fields/Number_of_Tutor_Sections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tutor_Sections__c</fullName>
    <label>Number of Tutor Sections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>