unpackaged/main/default/objects/Opportunity/fields/Official_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Official_Book_Name__c</fullName>
    <formula>Book__r.Official_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Official Book Name</label>
    <type>Text</type>
</CustomField>