unpackaged/main/default/objects/Opportunity/fields/OS_Accounts_ID__c.field-meta.xml
<CustomField>
    <fullName>OS_Accounts_ID__c</fullName>
    <formula>Contact__r.Accounts_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OS Accounts ID</label>
    <type>Text</type>
</CustomField>