unpackaged/main/default/objects/Opportunity/fields/Pardot_Score__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Score__c</fullName>
    <formula>Contact__r.pi__score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pardot Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>