unpackaged/main/default/objects/Opportunity/fields/possible__c.field-meta.xml
<CustomField>
    <fullName>possible__c</fullName>
    <formula>Contact__r.Possible_Students_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of Students from Interest opps this year</inlineHelpText>
    <label>Possible Students this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>