unpackaged/main/default/objects/Opportunity/fields/Potential_Savings__c.field-meta.xml
<CustomField>
    <fullName>Potential_Savings__c</fullName>
    <formula>Book__r.Savings_Number__c * Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>