unpackaged/main/default/objects/Opportunity/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Course Not Offered</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>No online HW available</fullName>
            </value>
            <value>
                <fullName>Not Teaching</fullName>
            </value>
            <value>
                <fullName>Won't Charge Students</fullName>
            </value>
            <value>
                <fullName>Using Competitor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>LIT &gt;3 years ago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>