unpackaged/main/default/objects/Opportunity/fields/Recent_Resource_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Resource_Date__c</fullName>
    <formula>Contact__r.Last_Resource_Download_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Resource Date</label>
    <type>Date</type>
</CustomField>