unpackaged/main/default/objects/Opportunity/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Renewal</fullName>
                <default>true</default>
                <label>Needs Renewal</label>
            </value>
            <value>
                <fullName>Done Renewed</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Needs check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>