unpackaged/main/default/objects/Opportunity/fields/Renewed__c.field-meta.xml
<CustomField>
    <fullName>Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewed</label>
    <type>Checkbox</type>
</CustomField>