unpackaged/main/default/objects/Opportunity/fields/Saving_Number__c.field-meta.xml
<CustomField>
    <fullName>Saving_Number__c</fullName>
    <label>Saving Number</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>