unpackaged/main/default/objects/Opportunity/fields/School_Type__c.field-meta.xml
<CustomField>
    <fullName>School_Type__c</fullName>
    <formula>Text(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Type</label>
    <type>Text</type>
</CustomField>