unpackaged/main/default/objects/Opportunity/fields/Short_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Book_Name__c</fullName>
    <formula>Book__r.Short_Book_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Book Name</label>
    <type>Text</type>
</CustomField>