unpackaged/main/default/objects/Opportunity/fields/Should_Annual__c.field-meta.xml
<CustomField>
    <fullName>Should_Annual__c</fullName>
    <formula>IF(
CASE( Account.Type , 
"College/University (4)", "True",
"Technical/Community College (2)", "True",
"Career School/For-Profit (2)", "True",
"false") = "True" , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Should Annual</label>
    <type>Checkbox</type>
</CustomField>