unpackaged/main/default/objects/Opportunity/fields/Shouldn_t_Exist__c.field-meta.xml
<CustomField>
    <fullName>Shouldn_t_Exist__c</fullName>
    <formula>Base_Year__c  
-
( YEAR(Last_In_Touch_Date__c) - IF( MONTH( Last_In_Touch_Date__c) &lt;7 , 1,0) )
 &gt; 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LIT date is greater than 3 years ago</inlineHelpText>
    <label>Shouldn't Exist</label>
    <type>Checkbox</type>
</CustomField>