unpackaged/main/default/objects/Opportunity/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <description>Signup Date from OpenStax Accounts</description>
    <formula>Contact__r.Signup_Date__c</formula>
    <inlineHelpText>Signup Date from OpenStax Accounts</inlineHelpText>
    <label>Signup Date</label>
    <type>DateTime</type>
</CustomField>