unpackaged/main/default/objects/Opportunity/fields/sort__c.field-meta.xml
<CustomField>
    <fullName>sort__c</fullName>
    <description>Used for sorting opps by duplicates when exported to csv</description>
    <formula>IF(RecordType.Name = "Tutor Opp","T","")&amp;
Book__r.Id &amp; 
AccountId &amp; 
Contact_ID__c &amp; 
IF(Department_Adoption__c,"TRUE","FALS") &amp; 
TEXT(Base_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sort</label>
    <type>Text</type>
</CustomField>