unpackaged/main/default/objects/Opportunity/fields/SortLong__c.field-meta.xml
<CustomField>
    <fullName>SortLong__c</fullName>
    <formula>Book__r.Id &amp;  Account.LongID__c  &amp; CASESAFEID(Contact_ID__c) &amp; TEXT(Base_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SortLong</label>
    <type>Text</type>
</CustomField>