unpackaged/main/default/objects/Opportunity/fields/Spring_Dept_Max_Students__c.field-meta.xml
<CustomField>
    <fullName>Spring_Dept_Max_Students__c</fullName>
    <label>Spring Dept Max Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>