unpackaged/main/default/objects/Opportunity/fields/Spring_Savings__c.field-meta.xml
<CustomField>
    <fullName>Spring_Savings__c</fullName>
    <formula>Spring_Students__c * Saving_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spring Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>