unpackaged/main/default/objects/Opportunity/fields/Spring_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Spring_Start_Date__c</fullName>
    <label>Spring Start Date</label>
    <type>Date</type>
</CustomField>