unpackaged/main/default/objects/Opportunity/fields/Student_No_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_No_Status__c</fullName>
    <label>Student No Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reported</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Auto-Guess</fullName>
            </value>
            <value>
                <fullName>Annualized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>