unpackaged/main/default/objects/Opportunity/fields/Students_Okay__c.field-meta.xml
<CustomField>
    <fullName>Students_Okay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Students Okay</label>
    <type>Checkbox</type>
</CustomField>