unpackaged/main/default/objects/Opportunity/fields/Sum_Students_Paid_Comped__c.field-meta.xml
<CustomField>
    <fullName>Sum_Students_Paid_Comped__c</fullName>
    <description>Sum of Students Paid and Students Comped</description>
    <formula>( Tutor_Students_Paid__c +  Tutor_Students_Comped__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum - Students Paid &amp; Comped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>