unpackaged/main/default/objects/Opportunity/fields/Summer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Summer_Start_Date__c</fullName>
    <label>Summer Start Date</label>
    <type>Date</type>
</CustomField>