unpackaged/main/default/objects/Opportunity/fields/Summer_Students__c.field-meta.xml
<CustomField>
    <fullName>Summer_Students__c</fullName>
    <label>Summer Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>